fix: Remove conditional rendering of settings/reference buttons on smaller screens

--- a/frontend/styles/pages/debug-view.css
+++ b/frontend/styles/pages/debug-view.css
@@ -190,10 +190,3 @@
 .debug-view-expand-code.expanded {
     width: 113px;
 }
-
-@media (max-width: 1024px) {
-    .debug-view-button-settings,
-    .debug-view-button-state {
-      display: none;
-    }
-  }
